@@ -1,3 +1,9 @@
+2005-04-11  Geoffrey Keating  <geoffk@apple.com>
+
+	* build_gcc: Use I386_CPU each time something is configured 
+	to target x86.
+	(I386_CPU): New.
+
 2005-02-28  Stan Shebs  <shebs@apple.com>
 	    Ian Ollmann <iano@apple.com>
 
