@@ -1,3 +1,9 @@
+2005-04-11  Geoffrey Keating  <geoffk@apple.com>
+
+	* config/i386/i386.h (TARGET_FPMATH_DEFAULT): New.
+	* config/i386/darwin.h (TARGET_FPMATH_DEFAULT): New.
+	* config/i386/i386.c (override_options): Use TARGET_FPMATH_DEFAULT.
+
 2005-03-15  Uros Bizjak  <uros@kss-loka.si>
 
 	PR target/18668
